--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.twcch</groupId>
-	<artifactId>spring-boot-course</artifactId>
+	<artifactId>ref-springboot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-course</name>
+	<name>ref-springboot</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
